[tool.poetry]
name = "qa-demo"
version = "0.1.0"
description = ""
authors = ["Zhe(Jason) An <anzhe0629@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
nicegui = "^1.4.28"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
